--- a/views/dash.ejs
+++ b/views/dash.ejs
@@ -25,7 +25,7 @@
         </header>
         <main class="main"> 
         <h1 class="command1">test</h1>
-            <form method="POST" action="/test" name="command1">
+            <form method="POST" action="/dashboard/test" name="command1">
                 <div class="switchArea">
                     <input name="command1" type="checkbox" id="toggle1" <%= check %>>
                     <label for="toggle1"><span></span></label>
